--- a/toucan/css/blue.css
+++ b/toucan/css/blue.css
@@ -27,6 +27,7 @@
 14. Selection Color
 15. Screen Readers
 16. Horizontal Rule
+17. Scroolbar 
 
 ===================== */
 .theme-light {
@@ -623,8 +624,31 @@ body a::-webkit-selection {
   border: 0;
 }
 
-/* 16. Horizontal Rule */
+/* 16. Horizontal Rule
+17. Scroolbar  */
 
 hr {
   border-top: 0.5px solid var(--color-tertiary);
+}
+
+/* 17. scroolbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--color-secondary);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-tertiary);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-tertiary);
 }
