--- a/css/toucan-typography.css
+++ b/css/toucan-typography.css
@@ -3,15 +3,19 @@
 }
 .toucan-h1 {
   font-family: "Kanit", sans-serif;
-  font-weight: 700;
-  font-size: 32px;
-  text-align: left;
+  font-weight: 900;
+  font-size: 60px;
+  word-wrap: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .toucan-h2 {
   font-family: "Kanit", sans-serif;
-  font-weight: 800;
-  font-size: 24px;
+  font-weight: 900;
+  font-size: 32px;
   text-align: left;
 }
 
@@ -19,22 +23,19 @@
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  text-align: left;
 }
 
 .display-kanit {
   font-family: "Kanit", sans-serif;
   font-weight: 300;
-  font-size: 32px;
-  text-align: left;
+  font-size: 40px;
 }
 
 .toucan-p {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  line-height: 2.5rem;
-  text-align: left;
-  font-size: 16px;
+  line-height: 2rem;
+  font-size: 18px;
 }
 
 .toucan-a {
