Progress Almost done
Typography Section

--- a/css/style.css
+++ b/css/style.css
@@ -1901,6 +1901,10 @@ footer .social-icons {
   background-color: #34393d;
 }
 
+.dark-green-text {
+  color: #2e8651;
+}
+
 .white-text {
   color: #f2f2f2;
 }
