--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,18 @@ section {
   border: solid 2px #f2f2f2;
   color: #f2f2f2;
 }
+.toucan-grey .site-btn {
+  border: solid 2px #f2f2f2;
+  color: #f2f2f2;
+}
+
+.toucan-grey .site-btn:hover {
+  background: #f2f2f2;
+  color: #232325;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+}
 
 .dark-bg .site-btn:hover {
   background: #f2f2f2;
