CSS for language script added to style sheet

--- a/css/style.css
+++ b/css/style.css
@@ -2158,7 +2158,7 @@ footer .social-icons {
   padding: 10px 10px 10px 20px;
 }
 
-/*Language Change*/
+ /* CSS for language Script */
 div[lang] {
   display: none;
 }
