--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,9 @@
 
 @import url("responsive.css");
 @import url("../font/font.css");
-@import url("margins.css");
-@import url("reset.css");
-@import url("assets.css");
+@import url("/css/margins.css");
+@import url("/css/reset.css");
+@import url("/css/assets.css");
 
 /*------------------------ 1 Body and Core Css ------------------------*/
 
